# feedscanpp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/feedscanpp/: analysis.py  detector.py  geometry.py  main.py  rotation.py  transform.py  trim.py
